# leiasr-tests

./: .gitignore  ARTIFACT_DEPENDENCIES.md  CLAUDE.md  DisplayManager.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_STATUS.md  LookAroundEyes-PRD.md  LookAroundEyes.md  MIGRATION_TOOL.md  MODERNIZED_EXAMPLES.md  SR_SDK_EXPERIENCE.md  commit-for-ci.sh  sdk-summary.md  splat-prd.md  splat-task-list.md  task-list.md  todo.md
.github/: BUILD_WITH_ACTIONS.md
.github/workflows/: build-leiasr-examples.yml  build-migrated-examples.yml  build-migration-tool.yml  build-modernized-examples.yml  build-windows.yml  test-migration-tool.yml  test-sdk-example.yml
EXAMPLES/migration-results/: README.md
EXAMPLES/migration-results/legacy-fallback/: display_helper.h  main.cpp  main.cpp.legacy
EXAMPLES/migration-results/modern/: main.cpp
LeiaSR-SDK-1.34.8-RC1-win64/doc/: IWeaverBase_8h.html  IWeaverBase_8h__dep__incl.map  IWeaverBase_8h__dep__incl.md5  IWeaverBase_8h__incl.map  IWeaverBase_8h__incl.md5  IWeaverBase_8h_source.html  SDK_Installation.html  SDK__Installation_8md.html  WeaverC_8h.html  WeaverC_8h__incl.map  WeaverC_8h__incl.md5  WeaverC_8h_source.html  WeaverTypes_8h.html  WeaverTypes_8h__dep__incl.map  WeaverTypes_8h__dep__incl.md5  WeaverTypes_8h_source.html  Weaver_8h.html  Weaver_8h__incl.map  Weaver_8h__incl.md5  Weaver_8h_source.html  WindowsDisplayUtilities_8h.html  WindowsDisplayUtilities_8h__incl.map  WindowsDisplayUtilities_8h__incl.md5  WindowsDisplayUtilities_8h_source.html  admin__c_8h.html  admin__c_8h_source.html  annotated.html  application__guidelines_8md.html  application_guidelines.html  applicationsense_8h.html  applicationsense_8h__incl.map  applicationsense_8h__incl.md5  applicationsense_8h_source.html  architecture.html  architecture_8md.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  (+1123 more)
LeiaSR-SDK-1.34.8-RC1-win64/doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+107 more)
LeiaSR-SDK-1.34.8-RC1-win64/examples/csharp/: SimulatedRealityInterop.cs
LeiaSR-SDK-1.34.8-RC1-win64/examples/directx9_weaving/: CMakeLists.txt
LeiaSR-SDK-1.34.8-RC1-win64/examples/directx9_weaving/directx9_weaving/: main.cpp
LeiaSR-SDK-1.34.8-RC1-win64/examples/gesturerecognizer/: CMakeLists.txt
LeiaSR-SDK-1.34.8-RC1-win64/examples/gesturerecognizer/src/: gesturerecognizer.cpp
LeiaSR-SDK-1.34.8-RC1-win64/examples/lenshints/: CMakeLists.txt
LeiaSR-SDK-1.34.8-RC1-win64/examples/opengl_weaving/: CMakeLists.txt
LeiaSR-SDK-1.34.8-RC1-win64/examples/opengl_weaving/opengl_weaving/: main.cpp  simple-opengl-loader.h
LeiaSR-SDK-1.34.8-RC1-win64/examples/parallax_toggle/: CMakeLists.txt  main.cpp  resource.rc
LeiaSR-SDK-1.34.8-RC1-win64/include/sr/: types.h
LeiaSR-SDK-1.34.8-RC1-win64/lib/: SimulatedRealityCore.lib  SimulatedRealityDisplays.lib  SimulatedRealityHandTrackers.lib  SimulatedRealityUserModelers.lib  simulatedreality.lib
LeiaSplatViewer/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  LeiaSplatViewer.vcxproj  README.md
LeiaSplatViewer/shaders/: PointCloud_PS.hlsl  PointCloud_VS.hlsl  SplatSort_CS.hlsl  Splat_GS.hlsl  Splat_PS.hlsl  Splat_VS.hlsl
LeiaSplatViewer/src/: Math.h  OrbitCamera.cpp  OrbitCamera.h  SplatLoader.cpp  SplatLoader.h  main.cpp
LookAroundEyesApp/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  HOW_TO_RUN.md  LookAroundEyesApp.vcxproj  README.md
LookAroundEyesApp/shaders/: PixelShader.hlsl  VertexShader.hlsl
LookAroundEyesApp/src/: DualEyeTracker.cpp  DualEyeTracker.h  HUD.cpp  HUD.h  Math.h  Scene.cpp  Scene.h  leia_math.h  main.cpp
MIGRATION-TOOL/: DEVELOPER_GUIDE.md  EXECUTABLE_BUILD.md  README.md  RELEASE_NOTES_v1.1.md  TEST_RESULTS.md
MIGRATION-TOOL/python-source/: leiasr-migrate.spec
MIGRATION-TOOL/python-source/leiasr_migrate/: __init__.py  cli.py  transformer.py
MIGRATION-TOOL/release/: CHANGELOG.md  QUICKSTART.txt  README.md
leiasr-migrate/: setup.py
leiasr-migrate/leiasr_migrate/: analyzer.py  cli.py  transformer.py
leiasr-migrate/leiasr_migrate/patterns/: display_patterns.yaml
migration-tool-release/: CHANGELOG.md  FULL-README.md  QUICKSTART.md  README.md  README.txt
modernized_examples/cpp_modern/: CMakeLists.txt
modernized_examples/cpp_modern/src/: main.cpp
modernized_examples/opengl_weaving_modern/: CMakeLists.txt  main.cpp
simulatedreality-SDK-1.34.8.31132-win64-Release/: Install.bat  License.txt  Readme.txt  SR_SDK_INTEGRATION_GUIDE.md
simulatedreality-SDK-1.34.8.31132-win64-Release/examples/c/: CMakeLists.txt
simulatedreality-SDK-1.34.8.31132-win64-Release/examples/directx10_weaving/: CMakeLists.txt
simulatedreality-SDK-1.34.8.31132-win64-Release/examples/directx10_weaving/directx10_weaving/: leia_math.h  main.cpp
simulatedreality-SDK-1.34.8.31132-win64-Release/examples/directx11_weaving/: CMakeLists.txt
simulatedreality-SDK-1.34.8.31132-win64-Release/examples/directx11_weaving/directx11_weaving/: resource.h
simulatedreality-SDK-1.34.8.31132-win64-Release/examples/directx12_weaving/: CMakeLists.txt
simulatedreality-SDK-1.34.8.31132-win64-Release/examples/directx12_weaving/directx12_weaving/: main.cpp  resource.h
simulatedreality-SDK-1.34.8.31132-win64-Release/examples/predictingeyetracker/: CMakeLists.txt
simulatedreality-SDK-1.34.8.31132-win64-Release/examples/predictingeyetracker/src/: predictingeyetracker.cpp
simulatedreality-SDK-1.34.8.31132-win64-Release/lib/: DimencoWeaving.lib  SimulatedRealityCameras.lib  SimulatedRealityDirectX.lib  SimulatedRealityDisplays.lib  SimulatedRealityFaceTrackers.lib  SimulatedRealityOpenGL.lib  libserialport.lib
(+134 files in other folders)
